# rust-auth-api

./: .gitignore  Cargo.toml  Makefile  README.md  log4rs.yaml
src/: init.rs  main.rs
src/api/: mod.rs
src/api/v1/: mod.rs
src/api/v1/handlers/: auth.rs  mod.rs  user.rs
src/api/v1/middlewares/: middleware.rs
src/api/v1/models/: auth.rs  general.rs  mod.rs  user.rs
src/api/v1/responses/: response.rs
src/api/v1/routes/: auth.rs  index.rs  user.rs
src/app/: cloudflare_s3.rs  fcm.rs  mod.rs  mongo.rs  mutex.rs  redis.rs
src/fcm_rust/: Cargo.toml
src/fcm_rust/src/: fcm.rs  lib.rs
src/public/templates/: broadcast.html  footer.html  message.html  welcome.html
